infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-auth
  template:
    metadata:
      labels:
        app: library-auth
    spec:
      containers:
        - name: library-auth
          image: hosnibounechada/library-auth
---
apiVersion: v1
kind: Service
metadata:
  name: library-auth-srv
spec:
  selector:
    app: library-auth
  ports:
    - name: library-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
