infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-auth-postgres
  template:
    metadata:
      labels:
        app: library-auth-postgres
    spec:
      containers:
        - name: library-auth-postgres
          image: postgres
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: library-auth-postgres-srv
spec:
  selector:
    app: library-auth-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
