infra/k8s/books-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-books-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-books
  template:
    metadata:
      labels:
        app: library-books
    spec:
      containers:
        - name: library-books
          image: hosnibounechada/library-books
---
apiVersion: v1
kind: Service
metadata:
  name: library-books-srv
spec:
  selector:
    app: library-books
  ports:
    - name: library-books
      protocol: TCP
      port: 3000
      targetPort: 3000
