infra/k8s/books-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-books-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-books-postgres
  template:
    metadata:
      labels:
        app: library-books-postgres
    spec:
      containers:
        - name: library-books-postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: library-books-postgres-srv
spec:
  selector:
    app: library-books-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
