infra/k8s/loans-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-loans-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-loans
  template:
    metadata:
      labels:
        app: library-loans
    spec:
      containers:
        - name: library-loans
          image: hosnibounechada/library-loans
---
apiVersion: v1
kind: Service
metadata:
  name: library-loans-srv
spec:
  selector:
    app: library-loans
  ports:
    - name: library-loans
      protocol: TCP
      port: 3000
      targetPort: 3000
