infra/k8s/loans-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-loans-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-loans-postgres
  template:
    metadata:
      labels:
        app: library-loans-postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: library-loans-postgres
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
              subPath: postgres/loans
          # resources:
          #   limits:
          #     memory: 512Mi
          #     cpu: "1"
          #   requests:
          #     memory: 256Mi
          #     cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: library-loans-postgres-srv
spec:
  selector:
    app: library-loans-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
