infra/k8s/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-rabbitmq
  template:
    metadata:
      labels:
        app: library-rabbitmq
    spec:
      containers:
        - name: library-rabbitmq
          image: rabbitmq:latest
          ports:
          - containerPort: 5672
          - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: library-rabbitmq-srv
spec:
  selector:
    app: library-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
